# ExperimentLab

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
configs/: config.yaml
configs/mc/: config.yaml  estimate_pi.yaml
configs/rl/: cartpole.yaml  config.yaml  crossing.yaml
configs/supervised/: config.yaml  fashion_mnist.yaml
experiment_lab/: __init__.py
experiment_lab/common/networks/: __init__.py  blocks.py  mlp.py  network.py
experiment_lab/common/resolvers/: __init__.py  list_resolvers.py  object_resolvers.py
experiment_lab/common/utils/: __init__.py
experiment_lab/configs/: config.yaml
experiment_lab/configs/rl/: atari.yaml  cartpole.yaml  config.yaml  walker.yaml
experiment_lab/core/: __init__.py  base_analysis.py  base_config.py  base_experiment.py  runner.py
experiment_lab/examples/: random_waits.py
experiment_lab/experiments/: __init__.py
experiment_lab/experiments/examples/: __init__.py  experiment_template.ipynb  mc_pi_estimate.py  random_waits.py
experiment_lab/experiments/monte_carlo/: __init__.py  config.py  experiment.py  main.py
experiment_lab/experiments/monte_carlo/components/: __init__.py  aggregators.py  post_processors.py  sample_filters.py  samplers.py
experiment_lab/experiments/rl/: __init__.py  analysis.py  config.py  environment.py  experiment.py  main.py
experiment_lab/experiments/supervised/: __init__.py  config.py  experiment.py  main.py
experiment_lab/tests/common/resolvers/: test_list_resolvers.py
experiment_lab/tests/experiments/rl/: test_environment.py
scripts/: activate.sh  clean.sh  upload_dev.sh  upload_prod.sh
